--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clone-deep": "^0.2.4",
     "debug": "^2.2.0",
     "directory-tree": "^1.1.0",
+    "elasticsearch": "^11.0.1",
     "express": "^4.13.4",
     "fs": "0.0.2",
     "kerberos": "0.0.21",
